added a section to explain iCW773_test7

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -124,13 +124,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As stated before, *C. glutamicum* is a common industrial workhorse used for a wide range of applications. Therefore, some efforts have been made to simulate this organism in silico for valuable compounds’ yield prediction. The first genome-scale model of C. glutamicum was published by Kjeldsen and Nielsen in 2009 for the strain ATCC 13032. This model comprised 446 reactions and 411 metabolites. Although comparable flux values between in silico and experimental values were seen, some differences in the phenotypic behavior were observed [X]. Yohei and collaborators made a new GSM for the same strain. Their metabolic network included 277 genes, 502 metabolic reactions, and 423 metabolites. This model was curated thoroughly, i.e., it was not just a collection of all publicly available data. Furthermore, the researchers stated that their model simulated different oxygen uptake rates better than the previous GSM published [Y]. \n",
+    "As stated before, C. glutamicum is a common industrial workhorse used for a wide range of applications. Therefore, some efforts have been made to simulate this organism in silico for valuable compounds’ yield prediction. The first genome-scale model of C. glutamicum was published by Kjeldsen and Nielsen in 2009 for the strain ATCC 13032. This model comprised 446 reactions and 411 metabolites. Although comparable flux values between in silico and experimental values were seen, some differences in the phenotypic behavior were observed [1]. Yohei and collaborators made a new GSM for the same strain. Their metabolic network included 277 genes, 502 metabolic reactions, and 423 metabolites. This model was curated thoroughly, i.e., it was not just a collection of all publicly available data. Furthermore, the researchers stated that their model simulated different oxygen uptake rates better than the previous GSM published [2]. \n",
     "\n",
-    "In the other hand, there is another strain of *C. glutamicum* that has been used as a workhorse, namely, S9114. This strain is used for glutamate production due to its particularly high resistance to sugars and glutamate. Mei et al., made a tailored GSM for this strain due that previous GSMs lacking a complete glutamate metabolic pathway. Therefore, none of the two models could be used to study glutamate metabolism. The model, named iJM658, comprised 658 genes, 984 metabolites and 1065 reactions [Z]. It was used to predict essential genes, investigate glutamate metabolism, and evaluate the capacity of g-aminobutyrate and l-isoleucine production by S9114. \n",
+    "In the other hand, there is another strain of C. glutamicum that has been used as a workhorse, namely, S9114. This strain is used for glutamate production due to its particularly high resistance to sugars and glutamate. Mei et al., made a tailored GSM for this strain due that previous GSMs lacking a complete glutamate metabolic pathway. Therefore, none of the two models could be used to study glutamate metabolism. The model, named iJM658, comprised 658 genes, 984 metabolites and 1065 reactions [3]. It was used to predict essential genes, investigate glutamate metabolism, and evaluate the capacity of g-aminobutyrate and l-isoleucine production by S9114. \n",
     "\n",
-    "The last GSM described for *C. glutamicum* was published in 2017 by Zhang and collaborators [XX]. They updated the previous model of the *C. glutamicum* ATCC 13032 metabolic network reconstruction. This new model, named iCW773, consisted of 773 genes, 950 metabolites, and 1207 reactions. It supplemented 496 gene-protein reaction associations, refined five lumped reactions, balanced the mass and charge, and constrained the directionality of reactions. Furthermore, overproduction simulations for L-lysine, 1,2-propanediol, isobutanol, as well as de novo L-proline overproducing strain were highly consistent with experimental data. Moreover, this model has been used lately to simulate production of trans-4-hydroxyproline [YY] and hyaluronic acid [ZZ], and decoupling L-serine catabolism from cell growth [XXX]. \n",
+    "The last GSM described for C. glutamicum was published in 2017 by Zhang and collaborators [4]. They updated the previous model of the C. glutamicum ATCC 13032 metabolic network reconstruction. This new model, named iCW773, consisted of 773 genes, 950 metabolites, and 1207 reactions. It supplemented 496 gene-protein reaction associations, refined five lumped reactions, balanced the mass and charge, and constrained the directionality of reactions. Furthermore, overproduction simulations for L-lysine, 1,2-propanediol, isobutanol, as well as de novo L-proline overproducing strain were highly consistent with experimental data. Moreover, this model has been used lately to simulate production of trans-4-hydroxyproline [5] and hyaluronic acid [6], and decoupling L-serine catabolism from cell growth [7]. \n",
     "\n",
-    "Despite of the fact that many GSMs are published for *C. glutamicum*, we could only have access to iCW773 and iJM658. However, only iCW773 was readable by COBRApy package and suitable to perform a MEMOTE analysis. In Table 1 all models are summarized."
+    "Despite of the fact that many GSMs are published for C. glutamicum, we could only have access to iCW773 and iJM658. However, only iCW773 was readable by COBRApy package and suitable to perform a MEMOTE analysis [8]. In Table 1 all models are summarized.  "
    ]
   },
   {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Regarding MEMOTE analysis, we observed an overall consistency score of 49 %, where stoichiometric consistency, mass balance, charge balance, metabolite connectivity and unbound flux in default medium were 0.0 %, 96.9 %, 100 %, 100 % and 44.4 %, respectively. The most worrisome fact is the stoichiometric consistency, because it means that this model might have at least one reaction with un-conserved metabolites. Nevertheless, the model is good enough to work with it due to it having the highest scores in mass and charge balance, as well as metabolite connectivity. In addition, this model has a metabolic coverage of 1.56, meaning that it has an elevated level of detail. In Table 2 details of MEMOTE analysis for iCW773 are summarized. "
+    "Regarding MEMOTE analysis, we observed an overall consistency score of 49 %, where stoichiometric consistency, mass balance, charge balance, metabolite connectivity and unbound flux in default medium were 0.0 %, 96.9 %, 100 %, 100 % and 44.4 %, respectively. The most worrisome fact is the stoichiometric consistency, because it means that this model might have at least one reaction with un-conserved metabolites. Nevertheless, the model is good enough to work with it due to it having the highest scores in mass and charge balance, as well as metabolite connectivity. In addition, this model has a metabolic coverage of 1.56, meaning that it has an elevated level of detail. In Table 2 details of MEMOTE analysis for iCW773 are summarized. \n"
    ]
   },
   {
@@ -163,6 +163,13 @@
     "| Model | Total score (%) | Metabolic coverage | Consistency score (%) | Annotation-metabolites score (%) | Annotation-reactions score (%) |\n",
     "|:-:|:-:|:-:|:-:|:-:|:-:|\n",
     "| iCW773 | 23 | 1.56 | 49 | 25 | 25 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the original iCW773.xml file resulted in quite a high number of \"not a valid SBML 'STd'\", we changed \"-\" to \"_\" for the metabolites, which caused the error message. e.g. we changed trp-L_c to trp_L_e. This could solve all the errors. Afterwards we run a memote anaysis to verify, that nothing was broken by doing this. The iCW773 model, which resulted from this is called iCW773_test7."
    ]
   },
   {
@@ -742,6 +749,23 @@
     "7.  \thttps://fortune.com/2021/09/04/psychedelic-industry-investment-growth-stocks-companies/\n",
     "\n",
     "8.  \thttps://www.nejm.org/doi/full/10.1056/NEJMoa2032994\n",
+    "\n",
+    "#### References for \"Model selection\"\n",
+    "1. Kjeldsen KR, Nielsen J. In silico genome-scale reconstruction and validation of the Corynebacterium glutamicum metabolic network. Biotechnol Bioeng. 2009 Feb 1;102(2):583-97. doi: 10.1002/bit.22067. \n",
+    "\n",
+    "2. Shinfuku Y, Sorpitiporn N, Sono M, Furusawa C, Hirasawa T, Shimizu H. Development and experimental verification of a genome-scale metabolic model for Corynebacterium glutamicum. Microb Cell Fact. 2009 Aug 3;8:43. doi: 10.1186/1475-2859-8-43. \n",
+    "\n",
+    "3. Mei J, Xu N, Ye C, Liu L, Wu J. Reconstruction and analysis of a genome-scale metabolic network of Corynebacterium glutamicum S9114. Gene. 2016 Jan 10;575(2 Pt 3):615-22. doi: 10.1016/j.gene.2015.09.038. \n",
+    "\n",
+    "4. Zhang Y, Cai J, Shang X, Wang B, Liu S, Chai X, Tan T, Zhang Y, Wen T. A new genome-scale metabolic model of Corynebacterium glutamicum and its application. Biotechnol Biofuels. 2017 Jun 30;10:169. doi: 10.1186/s13068-017-0856-3. \n",
+    "\n",
+    "5. Zhang Y, Zhang Y, Shang X, Wang B, Hu Q, Liu S, Wen T. Reconstruction of tricarboxylic acid cycle in Corynebacterium glutamicum with a genome-scale metabolic network model for trans-4-hydroxyproline production. Biotechnol Bioeng. 2019 Jan;116(1):99-109. doi: 10.1002/bit.26818. \n",
+    "\n",
+    "6. Cheng F, Yu H, Stephanopoulos G. Engineering Corynebacterium glutamicum for high-titer biosynthesis of hyaluronic acid. Metab Eng. 2019 Sep;55:276-289. doi: 10.1016/j.ymben.2019.07.003. \n",
+    "\n",
+    "7. Zhang Y, Shang X, Lai S, Zhang Y, Hu Q, Chai X, Wang B, Liu S, Wen T. Reprogramming One-Carbon Metabolic Pathways To Decouple l-Serine Catabolism from Cell Growth in Corynebacterium glutamicum. ACS Synth Biol. 2018 Feb 16;7(2):635-646. doi: 10.1021/acssynbio.7b00373. \n",
+    "\n",
+    "8. Lieven C, Beber ME, Olivier BG, Bergmann FT, Ataman M, Babaei P, Bartell JA, Blank LM, Chauhan S, Correia K, Diener C, Dräger A, Ebert BE, Edirisinghe JN, Faria JP, Feist AM, Fengos G, Fleming RMT, García-Jiménez B, Hatzimanikatis V, van Helvoirt W, Henry CS, Hermjakob H, Herrgård MJ, Kaafarani A, Kim HU, King Z, Klamt S, Klipp E, Koehorst JJ, König M, Lakshmanan M, Lee DY, Lee SY, Lee S, Lewis NE, Liu F, Ma H, Machado D, Mahadevan R, Maia P, Mardinoglu A, Medlock GL, Monk JM, Nielsen J, Nielsen LK, Nogales J, Nookaew I, Palsson BO, Papin JA, Patil KR, Poolman M, Price ND, Resendis-Antonio O, Richelle A, Rocha I, Sánchez BJ, Schaap PJ, Sheriff RSM, Shoaie S, Sonnenschein N, Teusink B, Vilaça P, Vik JO, Wodke JAH, Xavier JC, Yuan Q, Zakhartsev M, Zhang C. Publisher Correction: MEMOTE for standardized genome-scale metabolic model testing. Nat Biotechnol. 2020 Apr;38(4):504. doi: 10.1038/s41587-020-0477-4. Erratum for: Nat Biotechnol. 2020 Mar;38(3):272-276. \n",
     "\n",
     "#### References for \"Problem definition\":\n",
     "1. \tZhang Y, Cai J, Shang X, et al. A new genome-scale metabolic model of Corynebacterium glutamicum and its application. Biotechnol Biofuels. 2017;10(1). doi:10.1186/s13068-017-0856-3\n",
