Added Bottleneck to Table

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -198,6 +198,7 @@
     "|Testing manually selected targets for up- and downregulation|y+n|\n",
     "|OptGene and OptKnock|n|\n",
     "|Identifying co-factor swap targets|n|\n",
+    "|Bottleneck Investigation|y|\n",
     "\n"
    ]
   },
@@ -637,7 +638,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.9 Bottleneck\n",
+    "#### 4.9 Bottleneck Investigation\n",
     "\n",
     "A cursory investigation of the reactions limiting the rate of psilocybin production was completed. Comparing the rate of production of each metabolite from tryptophan to psilocybin, by setting individual demand-functions and model objective targets, it was found that baeocystin production was limiting. The reaction in question converted S‐Adenosyl‐l‐Methionine (SAM) and norbaeocystin to S‐Adenosyl‐l‐homocysteine (SAH) and baeocystin.  \n",
     "\n",
@@ -853,7 +854,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
