Added Figure text

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -342,11 +342,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Figure 5 - Oxygen compared to Psilocybin production and growth rate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The growth rate varies due to the presence of oxygen, as would be expected, and will not work anaerobically under the present medium composition. The psilocybin flux, interestingly, seems to have some other bottleneck. The production rate quickly reaches a constant production rate, as soon as it has the necessary oxygen for production to happen, and as long as there is not enough to produce oxygen toxicity. \n",
     "\n",
     "Glucose:\n",
     "\n",
     "![Graph 3](Pictures/Graph3.png \"Graph 3\") ![Graph 4](Pictures/Graph4.png \"Graph 4\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Figure 6 - Glucose compared to Psilocybin production and growth rate"
    ]
   },
   {
@@ -359,9 +373,16 @@
     "\n",
     "Most factors proved to be uninteresting. Ammonia, sulfate, and potassium produced similar psilocybin production rate graphs as oxygen, where it only had to be present in sufficient quantities to be useful. Sodium would not give a result outside of a table, where it seemed to require small concentrations. \n",
     "\n",
-    "Potassium had a negative effect on production rate, likely reflecting changes to the ion and cofactor composition of the cell. \n",
+    "Potassium had a negative effect on production rate, likely reflecting changes to the ion and cofactor composition of the cell. However, potassium has an effect on osmotic pressure, which could also be the reason for the impact on the production rate.\n",
     "\n",
     "![Graph 5](Pictures/Graph5.png \"Graph 5\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Figure 7 - Potassium compared to Psilocybin production rate"
    ]
   },
   {
