--- a/Report.ipynb
+++ b/Report.ipynb
@@ -427,7 +427,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also need some text here. Someone should insert a list of the identified targets here. "
+    "Table 4: Upregulated targets and the respective psilocybin production rates.\n",
+    "\n",
+    "|reaction_id|\treaction_name|\tpsilocybin_production [mmol/gDW*h], when over-produced|\n",
+    "|:-:|:-:|:-:|\n",
+    "|ACHMSC|\tACHMSC|\t0.566093|\n",
+    "|PPA\t|inorganic diphosphatase|\t0.019372|\n",
+    "|MTHFR2|\t5,10_Methylenetetrahydrofolate reductase (NADH)|\t0.283047|\n",
+    "|GLNS\t|glutamine synthetase\t|0.019372|\n",
+    "|CYSTL\t|cystathionine b_Lyase|\t0.283047|\n",
+    "|HSST\t|homoserine O-acetyltransferase|\t0.283047|\n",
+    "|METS\t|methionine synthase\t|0.283047|\n",
+    "|GK1\t|guanylate kinase (GMP:ATP)\t|0.309959|\n",
+    "|GTPHs\t|GTP amine hydrolysis (spontaneous)|\t0.019372|\n",
+    "|NTPP11\t|Nucleoside triphosphate pyrophosphorylase (xtp)\t|0.309959|\n",
+    "|NADPHQR2\t|NADPH Quinone Reductase (Ubiquinone-8)|\t0.783052|\n",
+    "|GMPS2\t|GMP synthase\t|0.309959|\n"
    ]
   },
   {
@@ -701,7 +716,8 @@
     "\n",
     "The objective of this project was the heterologous production of psilocybin as a L-tryptophan derived product. A search for pathways using the Cameo package for heterologous pathway prediction did not result in a suggested pathway[1]. This is due to the missing metabolite “psilocybin” in the pathway_predictor_obj.universal_model.metabolites. Therefore, it was continued with the published pathway introduced previously for psilocybin production in *S.cerevisiae*[2]. The heterologous pathway was added to the model iCW773[3]. The maximum production rate resulted in ~5.7e-05 mmol gDW^-1 h^-1. This seemed to be a promising starting point, since this indicated potential for optimizing the yield of psilocybin. Moreover, the model revealed that psilocybin production reached its possible maximum when the cell is not growing. This also was expected, because L-tryptophan is used by growth-related reactions such as protein production or the synthesis of tryptophan t-RNAS.\n",
     "Within this project several optimization strategies were tested such as optimization of the media via addition of amino acids or increasing the amount of glucose present in the media. Both strategies did not result in any increase of production rate. Since L-tryptophan is consumed during the first step of the heterologous psilocybin production, the addition of it to the media is expected to result in an increase of the production rate, however this did not result in an increase of psilocybin production rate. Furthermore, the python package cameo provides algorithms for the identification of potential targets for cell-factory engineering[1]. Within this project we tested OptGene, OptKnock and Co-factor swapping. All three algorithms did not return any targets. \n",
-    "In order to identify targets for up- or downregulation a FSEOF analysis was performed. This resulted in a list of targets, 7 out of 24 are reactions of the heterologous pathway. However, when overexpression of single targets was performed, by setting the lower bound equal to the higher bound, it had no positive effect on the psilocybin production rate. It was decided to simulate overexpression in this way, since the bounds set in the model iCW773 seemed to be quite realistic, because they were set with very precise float numbers. The knockout of these targets, did not result in any optimization as well. As an additional approach we selected targets manually. For this, all reactions including L-tryptophan (from cytoplasm) were selected. These targets were then tested for either overexpression or knock-out, resulting in no increase of psilocybin production. \n",
+    "In order to identify targets for up- or downregulation a FSEOF analysis was performed. Overexpression of single targets was performed, by setting the lower bound equal to the higher bound. It was decided to simulate overexpression in this way, since the bounds set in the model iCW773 were set on experimental evidence. The target, which resulted in the highest increase for psilocybin production are summarized in Table 4. In total we identified 12 promising targets for upregulation.  \n",
+    "The knockout of these targets, did not result in any optimization as well. As an additional approach we selected targets manually. For this, all reactions including L-tryptophan (from cytoplasm) were selected. These targets were then tested for either overexpression or knock-out, resulting in no increase of psilocybin production. \n",
     "As a final investigation, we intended to identify the bottleneck, which is limiting all our optimization approaches for the production of psilocybin using *C. glutamicum*.  In order to achieve this, we tested adding each step of the heterologous pathway as demand functions and tested whether the production of the respective metabolite turns into 0. We could identify the reactions using SAM as co-factor as bottlenecks. By looking further into this we found the boundaries for SAM production from methionine as limiting factor, since they were set to 0 and ~0.0001. By increasing the higher bound we could enable more production of psilocybin. However, this approach is not desirable, because the authors, which created iCW773 used experimental data from 13C-tracer experiments to set the bounds[3]. \n"
    ]
   },
@@ -861,7 +877,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -875,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
