--- a/Report.ipynb
+++ b/Report.ipynb
@@ -727,8 +727,11 @@
    "source": [
     "## 6. Conclusion (<200 words)\n",
     "\n",
-    "Our report showed that it is theoretically possible to produce Psilocybin in *Corynebacterium glutamicum*. Nonetheless, the result obtained with the model iCW773 is not anywhere near being feasible for large scale production, as none of the tested optimization strategies could  improve the Psilocybin production beyond the initial yield of ~5.7e-05 mmol gDW^-1 h^-1.  A deeper investiagtion toward the bottleneck of our production reveiled that the co-factor SAM, which is used for two steps of the heterologous pathway is limiting the production.  The bounds for synthesis of SAM from methionin are set to a low level (0 and 0.0001), but on the basis of experimental data and thus could be easily optimized within this project.\n",
-    "However, the code used in our report could still be useful for a future study, as there was recently published a new version of the *Corynebacterium glutamicum* model from Feierabend et al 2021 (iCGB21FR). Interestingly Feierabend et al., 2021 commented on iCW773 as a model to be used with caution due to reconstruction inconsistencies and incorrect metabolites. The approach of producing psilocybin via the cell-factory *C. glutamicum * could be further investigated in a future project by using the new “high-quality” model iCGB21FR [4]."
+    "Our report showed that it is theoretically possible to produce Psilocybin in Corynebacterium glutamicum. The initial yield of psilocybin calculated to be ~5.7e-05 mmol gDW^-1 h^-1.  \n",
+    "\n",
+    "Up and down regulation of genes revealed overproduction of various genes identified by FSEOF to be a promising method of increasing the production rate, with the indivual associated predicted psilocybin fluxes drastically increasing to up to 0.783 mmol gDW^-1 h^-1. These FSEOF-based targets were much more promising than manually selected targets.  \n",
+    "\n",
+    "A deeper investigation into the bottleneck of our production revealed that the co-factor SAM, which is used for two steps of the heterologous pathway is limiting production. The bounds for synthesis of SAM from methionine are set to a low level (0 and 0.0001), but based on experimental data, and thus could be easily optimized within this project. However, the code used in our report could still be useful for a future study, as a new version of the Corynebacterium glutamicum model was recently published from Feierabend et al 2021 (iCGB21FR). Interestingly Feierabend et al., 2021 commented on iCW773 as a model to be used with caution due to reconstruction inconsistencies and incorrect metabolites. The approach of producing psilocybin via the cell-factory C. glutamicum could be further investigated in a future project by using the new “high-quality” model iCGB21FR [4]. "
    ]
   },
   {
@@ -877,7 +880,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -891,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
