Added FSEOF Results

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -427,6 +427,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Flux Scanning based on Enforced Objective Flux is an algorithm that identifies putative reactions as targets for modulation of gene expression. Typically identified reactions have three possible intracellular flux profiles, either they have an increased, decreased, or unchanged profile. In addition, the scanning of candidates occurs under the objective function of maximizing biomass formation flux. As outcome, genes associated with reactions that positively correlate to compound production, i.e., reactions that increase their flux along with the product flux, are identified as putative targets for overexpression. \n",
+    "\n",
+    "Our results show 20 putative candidates for psilocybin production enhancement. These candidates were selected on a basis of two parameters: (1) Having a Relative change in flux above 85.0 % and (2) A slightly positive correlation with psilocybin flux (positive slope > 0.2). Most of them are related to central energy or essential metabolites metabolism. Among the top ten candidates, which have the strongest correlation, we found the following candidates: \n",
+    "\n",
+    "PPA, ADK1, GLNS, NDPK1, NTPP11, GTPHs, GMPS2, GK1, NADPHQR2 and GLUTRS. \n",
+    "\n",
+    "ADK1, NDPK1, NADPHQR2, and GK1 are genes related to energy molecules productions. PPA encodes an inorganic diphosphatase that generates free phosphate. Therefore, it seems reasonable to up-regulate genes that will increase the amount of ATP or its precursors to generate psilocybin (ATP consuming reaction).  \n",
+    "\n",
+    "In the other hand, GMPS2 encodes a GMP synthase. It consumes L-glutamine, xanthosine monophosphate (XMP), and ATP to produce AMP, GMP and L-glutamate. NTPP11 encodes a Nucleoside triphosphate pyrophosphorylase which produces XMP and diphosphate from H2O and xanthosine triphosphate (XTP). Moreover, GTPHs is a spontaneous hydrolysis reaction of GTP that produce ammonium and XTP. Furthermore, the third reaction with the highest correlation was GLNS which stands for “Glutamine Synthase”. GLNS consumes L-glutamate to produce L-glutamine. Psilocybin is a tryptophan derivative product, and its biosynthetic pathway needs L-glutamine to be produced. Hence, altogether, the FSEOF analysis suggests that an overexpression of L-glutamine synthesis or conversion may have a positive impact regarding psilocybin production. \n",
+    "\n",
+    "Noteworthy, other genes that produce other necessary precursors were also detected, e.g., MTHFR2 (Methylenetetrahydrofolate reductase) and METS (Methionine Synthase). \n",
+    "\n",
+    "However, not all putative promising targets resulted in an increase of psilocybin production. 12 targets were identified to have a positive effect on production. These targets are summarized in Table 4. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Table 4: Upregulated targets and the respective psilocybin production rates.\n",
     "\n",
     "|reaction_id|\treaction_name|\tpsilocybin_production [mmol/gDW*h], when over-produced|\n",
@@ -894,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
