--- a/Report.ipynb
+++ b/Report.ipynb
@@ -491,36 +491,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Identified targets were further tested for upregulation. This was done within the Jupyter notebook for Manually_selected_targets (last section of code) (see link below). The upregulation was forced by setting the lower bound of the respective target equal to the upper bound. The numbers of the bounds were not changed, because most of them seemed quite realistic (e.g. 7.6788487). The gene modulation by upregulation of single targets did not result in higher production rates of psilocybin. The simultaneous upregulation of multiple targets was not covered within this project. Also, the modification of multiple targets will result in laborious cloning work."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<a href='09._Manually_selected_targets.ipynb' target='_blank'>09._Manually_selected_targets.ipynb</a><br>"
-      ],
-      "text/plain": [
-       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\09._Manually_selected_targets.ipynb"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "FileLink(\"09._Manually_selected_targets.ipynb\") "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 4.6 Testing manually selected targets for overexpression and downregulation"
    ]
   },
@@ -556,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +538,7 @@
        "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\09._Manually_selected_targets.ipynb"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,10 +563,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='07._Gene_Optimization.ipynb' target='_blank'>07._Gene_Optimization.ipynb</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\07._Gene_Optimization.ipynb"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FileLink(\"07._Gene_Optimization.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**OptKnock**\n",
+    "\n",
+    "As with Optgene, Optknock attempt to improve the production of the desired product. However, contrary to Optgene, Optknock doesn't optimize genes, but completely knocksout non-essential genes in the hope, that it will increase the flux towards the desired product. We tried running the Optknock command, but as with Optgene no results came up."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -620,38 +622,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**OptKnock**\n",
-    "\n",
-    "As with Optgene, Optknock attempt to improve the production of the desired product. However, contrary to Optgene, Optknock doesn't optimize genes, but completely knocksout non-essential genes in the hope, that it will increase the flux towards the desired product. We tried running the Optknock command, but as with Optgene no results came up."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<a href='07._Gene_Optimization.ipynb' target='_blank'>07._Gene_Optimization.ipynb</a><br>"
-      ],
-      "text/plain": [
-       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\07._Gene_Optimization.ipynb"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "FileLink(\"07._Gene_Optimization.ipynb\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Co-factor swapping** \n",
     "\n",
     "Co-factors are essential for many metabolic enzymes in order to function properly. Furthermore keeping the balance between co-factors is important for homeostasis. This balance could be unfavorable for metabolic engineering. A good example for such a balance are the co-factors NAD+/NADH and NADP+/NADPH. Actually, there are several enzymes reported to be able to use both as co-factors. Furthermore, it’s possible to engineer enzymes towards use of both co-factor or to change their preference towards another co-factor. In order to identify targets, where co-factor swapping would result in higher production of psilocybin, we tried Cameo’s Co-factor swapping algorithm. As this did not result in any suggested targets, co-factor swapping seems to be no promising strategy for our product, psilocybin. "
@@ -659,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -673,7 +643,7 @@
        "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\06._Cofactor_swapping.ipynb"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +688,7 @@
        "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\10._Bottleneck.ipynb"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +705,7 @@
     "\n",
     "The objective of this project was the heterologous production of psilocybin as a L-tryptophan derived product. A search for pathways using the Cameo package for heterologous pathway prediction did not result in a suggested pathway[1]. This is due to the missing metabolite “psilocybin” in the pathway_predictor_obj.universal_model.metabolites. Therefore, it was continued with the published pathway introduced previously for psilocybin production in *S.cerevisiae*[2]. The heterologous pathway was added to the model iCW773[3]. The maximum production rate resulted in ~5.7e-05 mmol gDW^-1 h^-1. This seemed to be a promising starting point, since this indicated potential for optimizing the yield of psilocybin. Moreover, the model revealed that psilocybin production reached its possible maximum when the cell is not growing. This also was expected, because L-tryptophan is used by growth-related reactions such as protein production or the synthesis of tryptophan t-RNAS.\n",
     "Within this project several optimization strategies were tested such as optimization of the media via addition of amino acids or increasing the amount of glucose present in the media. Both strategies did not result in any increase of production rate. Since L-tryptophan is consumed during the first step of the heterologous psilocybin production, the addition of it to the media is expected to result in an increase of the production rate, however this did not result in an increase of psilocybin production rate. Furthermore, the python package cameo provides algorithms for the identification of potential targets for cell-factory engineering[1]. Within this project we tested OptGene, OptKnock and Co-factor swapping. All three algorithms did not return any targets. \n",
-    "In order to identify targets for up- or downregulation a FSEOF analysis was performed. Overexpression of single targets was performed, by setting the lower bound equal to the higher bound. It was decided to simulate overexpression in this way, since the bounds set in the model iCW773 were set on experimental evidence. The target, which resulted in the highest increase for psilocybin production are summarized in Table 4. In total we identified 12 promising targets for upregulation. Most of them were related with L-glutamine synthesis. It may suggest that L-glutamine is one of the most important precursors to produce psilocybin.\n",
+    "In order to identify targets for up- or downregulation a FSEOF analysis was performed. Overexpression of single targets was performed, by setting the lower bound equal to the higher bound. It was decided to simulate overexpression in this way, since the bounds set in the model iCW773 were set on experimental evidence. The target, which resulted in the highest increase for psilocybin production are summarized in Table 4. In total we identified 12 promising targets for upregulation.  \n",
     "The knockout of these targets, did not result in any optimization as well. As an additional approach we selected targets manually. For this, all reactions including L-tryptophan (from cytoplasm) were selected. These targets were then tested for either overexpression or knock-out, resulting in no increase of psilocybin production. \n",
     "As a final investigation, we intended to identify the bottleneck, which is limiting all our optimization approaches for the production of psilocybin using *C. glutamicum*.  In order to achieve this, we tested adding each step of the heterologous pathway as demand functions and tested whether the production of the respective metabolite turns into 0. We could identify the reactions using SAM as co-factor as bottlenecks. By looking further into this we found the boundaries for SAM production from methionine as limiting factor, since they were set to 0 and ~0.0001. By increasing the higher bound we could enable more production of psilocybin. However, this approach is not desirable, because the authors, which created iCW773 used experimental data from 13C-tracer experiments to set the bounds[3]. \n"
    ]
@@ -913,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
